[package]
name = "growatt-exporter"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
axum = "0.7.4"
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
prometheus = "0.13.3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-modbus = { version = "0.10.0", features = ["rtu"], default-features = false }
tokio-serial = "5.4.4"
